--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  avatar           : "mmexport1769683318062.jpg"
+  name             : "Anda Cheng"
+  # pronouns         : # example: "he/him"  
+  # bio              : "Short biography for the left-hand sidebar"
+  location         : "Beijing, China"
+  # employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "andacheng.cad@gmail.com" 
 
   # Academic websites
   academia         : # URL
